--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
   },
   "dependencies": {
     "body-parser": "~1.18.2",
+    "cheerio": "^1.0.0-rc.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
-    "hbs": "~4.0.1",
+    "hbs": "^4.0.1",
+    "moment": "^2.20.1",
+    "mongojs": "^2.4.1",
     "morgan": "~1.9.0",
     "node-sass-middleware": "0.9.8",
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2",
     "serve-favicon": "~2.4.5"
   }
 }
